--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#smtp configuration for mail service
+#smtp configuration for mail service dynamic user and password
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${DEVELOPER_EMAIL}
