check-in tweet code appspec update 2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,8 @@ spring.jpa.properties.hibernate.format_sql=true
 #smtp configuration for mail service dynamic user and password
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${DEVELOPER_EMAIL}
-spring.mail.password=${APPLICATION_PASSWORD}
+spring.mail.username=sayandippaul66@gmail.com
+spring.mail.password=bsrxsllhbxtedywa
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
